--- a/FutaMeetWeb/Pages/JoinSession.cshtml
+++ b/FutaMeetWeb/Pages/JoinSession.cshtml
@@ -33,6 +33,15 @@
             <div class="row mt-4">
                 <div class="col-md-8">
                     <video id="sessionVideo" data-session-id="@Model.CurrentSessionId" autoplay class="modern-video" style="width: 100%; max-height: 400px; background: black;"></video>
+                    <div class="d-flex gap-2 mt-2" id="studentStatusControls">
+                        <button id="flagBatteryLow" class="btn btn-warning flex-fill" type="button">
+                            <i class="fas fa-battery-quarter"></i> Battery Low
+                        </button>
+                        <button id="flagDataFinished" class="btn btn-danger flex-fill" type="button">
+                            <i class="fas fa-signal"></i> Data Finished
+                        </button>
+                    </div>
+
                 </div>
                 <div class="col-md-4">
                     <div class="col-12">
